--- a/backend/manifest.yml
+++ b/backend/manifest.yml
@@ -29,6 +29,10 @@ spec:
       containers:
       - name: backend
         image: santhoshdatti/backend:1.0.0
+        envFrom:
+        - configMapRef: 
+            name: backend
+
 ---
 
 kind: Service
